--- a/index.html
+++ b/index.html
@@ -41,6 +41,50 @@
                <h2>бизнес класса</h2>
             </div>
          </div>
+         <div class="row">
+            <div class="col-9">
+               <section class="form1">
+                  <h3>Акция "Быстрый старт"<br>Под ключ за 14 999 руб.</h3>
+                  <p class="text">Без предоплаты<br>&nbsp;&nbsp;&nbsp;&nbsp;
+                     Предложение ограничено по сроку</p>
+                  <form action="">
+                     <input type="text" placeholder="* Имя">
+                     <input type="email" placeholder="* E-mail">
+                     <button>Заказать</button>
+                  </form>
+                  <p class="small">Нажимая на "Заказать" Вы даете согласие на обработку персональных данных</p>
+               </section>
+            </div>
+            <div class="col-3">
+               <img class="ellipse" src="img/Ellipse.png" alt="">
+               <img class="rocket" src="img/rocket.png" alt="">
+               <img class="sale" src="img/sale.png" alt="">
+               <img class="ship" src="img/ship.png" alt="">
+               <img class="helicopter" src="img/helicopter.png" alt="">
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-3">
+               <img src="img/man.png" alt="">
+            </div>
+            <div class="col--9">
+               <section class="form1 form2">
+                  <h3>Бонусный пакет 5 000 руб.</h3>
+                  <p class="checked"><img src="img/checked2.png"> Адаптивный дизайн.......................................<span>бесплатно</span></p>
+                  <p class="checked"><img src="img/checked2.png"> Помощь при формировании УТП.......<span>бесплатно</span></p>
+                  <p class="checked"><img src="img/checked2.png"> Корректура продающего текста...........<span>бесплатно</span></p>
+                  <p class="checked"><img src="img/checked2.png"> Рерайт........................................................................<span>бесплатно</span></p>
+                  <p class="bold">Получите бонус сейчас и гарантировано воспользуйтесь им<br> после окончания акции</p>
+                  <form action="">
+                     <input type="text" placeholder="* Имя">
+                     <input type="email" placeholder="* E-mail">
+                     <button>Получить</button>
+                  </form>
+                  <p class="small">Нажимая на "Получить" Вы даете согласие на обработку персональных данных</p>
+                  <img class="present" src="img/present.png" alt="">
+               </section>
+            </div>
+         </div>
       </div>
    </div>
 
