--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+   <!-- Меню -->
    <div class="container-fluid menu">
       <div class="container">
          <nav class="navbar navbar-expand-lg navbar-light">
@@ -33,6 +34,7 @@
          </nav>
       </div>
    </div>
+   <!-- Шапка -->
    <div class="container-fluid header">
       <div class="container">
          <div class="row">
@@ -65,15 +67,25 @@
          </div>
          <div class="row">
             <div class="col-3">
-               <img src="img/man.png" alt="">
+               <img src="img/man.png" alt="" class="man">
+               <ul class="social">
+                  <li>Поделиться: </li>
+                  <li><a href="#vk"><img src="img/vk.png" alt=""></a></li>
+                  <li><a href="#facebook"><img src="img/facebook.png" alt=""></a></li>
+                  <li><a href="#twitter"><img src="img/twitter.png" alt=""></a></li>
+                  <li><a href="#google"><img src="img/google.png" alt=""></a></li>
+                  <li><a href="#instagram"><img src="img/inst.png" alt=""></a></li>
+               </ul>
             </div>
             <div class="col--9">
                <section class="form1 form2">
                   <h3>Бонусный пакет 5 000 руб.</h3>
-                  <p class="checked"><img src="img/checked2.png"> Адаптивный дизайн.......................................<span>бесплатно</span></p>
+                  <p class="checked"><img src="img/checked2.png"> Адаптивный
+                     дизайн.......................................<span>бесплатно</span></p>
                   <p class="checked"><img src="img/checked2.png"> Помощь при формировании УТП.......<span>бесплатно</span></p>
                   <p class="checked"><img src="img/checked2.png"> Корректура продающего текста...........<span>бесплатно</span></p>
-                  <p class="checked"><img src="img/checked2.png"> Рерайт........................................................................<span>бесплатно</span></p>
+                  <p class="checked"><img src="img/checked2.png">
+                     Рерайт........................................................................<span>бесплатно</span></p>
                   <p class="bold">Получите бонус сейчас и гарантировано воспользуйтесь им<br> после окончания акции</p>
                   <form action="">
                      <input type="text" placeholder="* Имя">
@@ -83,6 +95,37 @@
                   <p class="small">Нажимая на "Получить" Вы даете согласие на обработку персональных данных</p>
                   <img class="present" src="img/present.png" alt="">
                </section>
+            </div>
+         </div>
+      </div>
+   </div>
+   <!-- О компании -->
+   <div class="container-fluid about">
+      <div class="container">
+         <div class="row">
+            <div class="col">
+               <h2>О компании</h2>
+            </div>
+         </div>
+         <div class="row align-items-center">
+            <div class="col-6">
+               <ul>
+                  <li>Актуальные web-решения. Для бизнеса. И не только</li><hr>
+                  <li>Специализация: одностраничники<br>(лендинги, промо-сайты, визитки)</li><hr>
+                  <li>Во всем новые – но не новички!</li><hr>
+                  <li>Проверенные технологии, маркетинговые сценарии и триггеры</li><hr>
+                  <li>Гарантия на программный код – 2 года</li><hr>
+                  <li>Средний срок исполнения заказа – 7 рабочих дней</li>
+               </ul>     
+            </div>
+            <div class="col-6">
+               <img src="img/about.png" class="img-fluid" alt="">
+            </div>
+         </div>
+         <div class="row text-center">
+            <div class="col">
+               <p>Требуется быстрее или возникли другие проблемы – <br>свяжись для получения бесплатной консультации:</p>
+               <button>Проконсультироваться</button>
             </div>
          </div>
       </div>
