--- a/index.html
+++ b/index.html
@@ -130,6 +130,40 @@
          </div>
       </div>
    </div>
+<!-- Услуги -->
+   <div class="container-fluid service">
+         <div class="container">
+            <div class="row text-center">
+               <div class="col">
+                  <h2>Услуги</h2>
+               </div>
+            </div>
+            <div class="row text-center justify-content-center">
+               <div class="col-3">
+                  <div class="mount">
+                     <img class="sale1" src="img/sale.png" alt="">
+                     <img src="img/create.png" alt="">
+                  </div>
+                  <p>Создание</p>
+                  <button>Заказать</button>
+               </div>
+               <div class="col-3">
+                  <div class="mount">
+                     <img src="img/support.png" alt="">
+                  </div>
+                  <p>Поддержка</p>
+                  <button>Заказать</button>
+               </div>
+               <div class="col-3">
+                  <div class="mount">
+                     <img src="img/seo.png" alt="">
+                  </div>
+                  <p>Продвижение (SEO)</p>
+                  <button>Заказать</button>
+               </div>
+            </div>
+         </div>
+   </div>
 
    <script src="js/jquery-3.3.1.min.js"></script>
    <script src="js/bootstrap.min.js"></script>
