--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <div class="container">
          <div class="row">
             <div class="col">
-               <h2>Лендинги</h2><br>
+               <h2><span>Л</span>ендинги</h2><br>
                <h2>бизнес класса</h2>
             </div>
          </div>
          <div class="row">
-            <div class="col-9">
+            <div class="col-8">
                <section class="form1">
                   <h3>Акция "Быстрый старт"<br>Под ключ за 14 999 руб.</h3>
                   <p class="text">Без предоплаты<br>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -57,14 +57,14 @@
                      <button>Заказать</button>
                   </form>
                   <p class="small">Нажимая на "Заказать" Вы даете согласие на обработку персональных данных</p>
+                  <img class="sale" src="img/sale.png" alt="">
+                  <img class="rocket" src="img/rocket.png" alt="">
+                  <img class="ship" src="img/ship.png" alt="">
+                  <img class="helicopter" src="img/helicopter.png" alt="">
                </section>
             </div>
-            <div class="col-3">
+            <div class="col-4">
                <img class="ellipse" src="img/Ellipse.png" alt="">
-               <img class="rocket" src="img/rocket.png" alt="">
-               <img class="sale" src="img/sale.png" alt="">
-               <img class="ship" src="img/ship.png" alt="">
-               <img class="helicopter" src="img/helicopter.png" alt="">
             </div>
          </div>
          <div class="row">
@@ -110,7 +110,7 @@
             </div>
          </div>
          <div class="row align-items-center">
-            <div class="col-6">
+            <div class="col-7">
                <ul>
                   <li>Актуальные web-решения. Для бизнеса. И не только</li>
                   <hr>
@@ -118,14 +118,14 @@
                   <hr>
                   <li>Во всем новые – но не новички!</li>
                   <hr>
-                  <li>Проверенные технологии, маркетинговые сценарии и триггеры</li>
+                  <li>Проверенные технологии, маркетинговые<br>сценарии и триггеры</li>
                   <hr>
                   <li>Гарантия на программный код – 2 года</li>
                   <hr>
                   <li>Средний срок исполнения заказа – 7 рабочих дней</li>
                </ul>
             </div>
-            <div class="col-6">
+            <div class="col-5">
                <img src="img/about.png" class="img-fluid" alt="">
             </div>
          </div>
@@ -145,7 +145,7 @@
                <h2>Услуги</h2>
             </div>
          </div>
-         <div class="row text-center justify-content-center">
+         <div class="row text-center justify-content-around">
             <div class="col-3">
                <div class="mount">
                   <img class="sale1" src="img/sale.png" alt="">
@@ -244,25 +244,29 @@
          <div class="row justify-content-center text-center">
             <div class="col-5 pb-4">
                <div class="orange">
-                  <p>Что нужно знать при заказе лендинга</p><br>
+                  <p>Что нужно знать при заказе лендинга</p>
+                  <br><br>
                   <button>Читать</button>
                </div>
             </div>
             <div class="col-5 pb-4">
                <div class="red">
-                  <p>Landing page: все, что вам нужно<br>знать о продающей странице</p>
+                  <p>Landing page: все, что вам нужно</p>
+                  <p>знать о продающей странице</p>
                   <button>Читать</button>
                </div>
             </div>
             <div class="col-5">
                <div class="blue">
-                  <p>Как улучшить дизайн landing page,<br>повысив при этом конверсию?</p>
+                  <p>Как улучшить дизайн landing page,</p>
+                  <p>повысив при этом конверсию?</p>
                   <button>Читать</button>
                </div>
             </div>
             <div class="col-5">
                <div class="green">
-                  <p>Какой цвет выбрать для презентации</p><br>
+                  <p>Какой цвет выбрать для презентации</p>
+                  <br><br>
                   <button>Читать</button>
                </div>
             </div>
@@ -280,7 +284,7 @@
             </div>
          </div>
          <div class="row text-center">
-            <div class="col-10 pb-5">
+            <div class="col-10 pb-4">
                <div class="review">
                   <img src="img/avatarMan.png" alt="">
                   <div>
@@ -291,7 +295,7 @@
             </div>
          </div>
          <div class="row justify-content-end">
-            <div class="col-10 pb-5">
+            <div class="col-10 pb-3">
                <div class="review right">
                   <img src="img/avatarWooman.png" height="100%" alt="">
                   <div>
@@ -303,7 +307,7 @@
             </div>
          </div>
          <div class="row">
-            <div class="col-10 pb-5">
+            <div class="col-10 pb-4">
                <div class="review">
                   <img src="img/avatarMan.png" alt="">
                   <div>
@@ -327,7 +331,7 @@
          </div>
          <div class="row text-center">
             <div class="col-12">
-               <span>Показать ещё...</span>
+               <span class="mt-3">Показать ещё...</span>
             </div>
          </div>
       </div>
@@ -341,7 +345,7 @@
                <p>Загрузи отдел продаж по полной!</p>
                <button class="button1">Заказать</button>
                <p>Остались вопросы –</p>
-               <button class="button2">Свяжитесь</button>
+               <button class="button2">Свяжись</button>
             </div>
          </div>
       </div>
@@ -382,7 +386,7 @@
                <ul>
                   <li>Контакты:</li>
                   <li><i class="fas fa-phone fa-rotate-90"></i> +7 920 654 38 10</li>
-                  <li><i class="far fa-envelope"></i> info@webforte.ru</li>
+                  <li class="email"><i class="far fa-envelope"></i>info@webforte.ru</li>
                   <li class="socialNet">
                      <i class="fab fa-google-plus-g"></i>
                      <i class="fab fa-vk"></i>
