--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
          </div>
          <div class="row">
-            <div class="col-8">
+            <div class="col-lg-8 col-sm-12">
                <section class="form1">
                   <h3>Акция "Быстрый старт"<br>Под ключ за 14 999 руб.</h3>
                   <p class="text">Без предоплаты<br>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -63,12 +63,12 @@
                   <img class="helicopter" src="img/helicopter.png" alt="">
                </section>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-sm-12">
                <img class="ellipse" src="img/Ellipse.png" alt="">
             </div>
          </div>
          <div class="row">
-            <div class="col-3">
+            <div class="col-xl-3 col-sm-12">
                <img src="img/man.png" alt="" class="man">
                <ul class="social">
                   <li>Поделиться: </li>
@@ -79,7 +79,7 @@
                   <li><a href="#instagram"><img src="img/inst.png" alt=""></a></li>
                </ul>
             </div>
-            <div class="col--9">
+            <div class="col-lg-9 col-sm-12">
                <section class="form1 form2">
                   <h3>Бонусный пакет 5 000 руб.</h3>
                   <p class="checked"><img src="img/checked2.png"> Адаптивный
@@ -88,7 +88,7 @@
                   <p class="checked"><img src="img/checked2.png"> Корректура продающего текста...........<span>бесплатно</span></p>
                   <p class="checked"><img src="img/checked2.png">
                      Рерайт........................................................................<span>бесплатно</span></p>
-                  <p class="bold">Получите бонус сейчас и гарантировано воспользуйтесь им<br> после окончания акции</p>
+                  <p class="bold">Получите бонус сейчас и гарантировано воспользуйтесь им после окончания акции</p>
                   <form action="">
                      <input type="text" placeholder="* Имя">
                      <input type="email" placeholder="* E-mail">
@@ -109,8 +109,8 @@
                <h2>О компании</h2>
             </div>
          </div>
-         <div class="row align-items-center">
-            <div class="col-7">
+         <div class="row align-items-center dflex-class">
+            <div class="col-lg-7 col-sm-12">
                <ul>
                   <li>Актуальные web-решения. Для бизнеса. И не только</li>
                   <hr>
@@ -125,8 +125,8 @@
                   <li>Средний срок исполнения заказа – 7 рабочих дней</li>
                </ul>
             </div>
-            <div class="col-5">
-               <img src="img/about.png" class="img-fluid" alt="">
+            <div class="col-lg-5 col-sm-12">
+               <img src="img/about.png" class="img-fluid" alt="man">
             </div>
          </div>
          <div class="row text-center">
@@ -145,8 +145,8 @@
                <h2>Услуги</h2>
             </div>
          </div>
-         <div class="row text-center justify-content-around">
-            <div class="col-3">
+         <div class="row text-center jca">
+            <div class="col-xl-3 col-sm-12">
                <div class="mount">
                   <img class="sale1" src="img/sale.png" alt="">
                   <img src="img/create.png" alt="">
@@ -154,14 +154,14 @@
                <p>Создание</p>
                <button>Заказать</button>
             </div>
-            <div class="col-3">
+            <div class="col-xl-3 col-sm-12">
                <div class="mount">
                   <img src="img/support.png" alt="">
                </div>
                <p>Поддержка</p>
                <button>Заказать</button>
             </div>
-            <div class="col-3">
+            <div class="col-xl-3 col-sm-12">
                <div class="mount">
                   <img src="img/seo.png" alt="">
                </div>
@@ -180,28 +180,28 @@
             </div>
          </div>
          <div class="row">
-            <div class="col-3 p-0">
+            <div class="col-xl-3 col-sm-12 p-0">
                <div class="item-steps active">
                   <img src="img/1.png" alt="1">
                   <img src="img/brif.png" height="45" alt="">
                   <p>Бриф</p>
                </div>
             </div>
-            <div class="col-3 p-0">
+            <div class="col-xl-3 col-sm-12 p-0">
                <div class="item-steps">
                   <img src="img/2.png" alt="2">
                   <img src="img/dogovor.png" height="45" alt="">
                   <p>Договор + ТЗ</p>
                </div>
             </div>
-            <div class="col-3 p-0">
+            <div class="col-xl-3 col-sm-12 p-0">
                <div class="item-steps">
                   <img src="img/3.png" alt="3">
                   <img src="img/zakaz.png" height="45" alt="">
                   <p>Исполнение<br>заказа</p>
                </div>
             </div>
-            <div class="col-3 p-0">
+            <div class="col-xl-3 col-sm-12 p-0">
                <div class="item-steps">
                   <img src="img/4.png" alt="4">
                   <img src="img/akt.png" height="45" alt="">
@@ -220,7 +220,7 @@
             </div>
          </div>
          <div class="row">
-            <div class="col-12">
+            <div class="col-xl-12">
                <div class="slider">
                   <div><img src="img/ex1.png" alt=""></div>
                   <div><img src="img/ex2.png" alt=""></div>
@@ -242,35 +242,35 @@
             </div>
          </div>
          <div class="row justify-content-center text-center">
-            <div class="col-5 pb-4">
+            <div class="col-xl-5 col-sm-12 pb-4">
                <div class="orange">
                   <p>Что нужно знать при заказе лендинга</p>
                   <br><br>
                   <button>Читать</button>
                </div>
             </div>
-            <div class="col-5 pb-4">
+            <div class="col-xl-5 col-sm-12 pb-4">
                <div class="red">
                   <p>Landing page: все, что вам нужно</p>
                   <p>знать о продающей странице</p>
                   <button>Читать</button>
                </div>
             </div>
-            <div class="col-5">
+            <div class="col-xl-5 col-sm-12 pb-4">
                <div class="blue">
                   <p>Как улучшить дизайн landing page,</p>
                   <p>повысив при этом конверсию?</p>
                   <button>Читать</button>
                </div>
             </div>
-            <div class="col-5">
+            <div class="col-xl-5 col-sm-12 pb-4">
                <div class="green">
                   <p>Какой цвет выбрать для презентации</p>
                   <br><br>
                   <button>Читать</button>
                </div>
             </div>
-            <div class="col-12">
+            <div class="col-xl-12">
                <span>Показать ещё...</span>
             </div>
          </div>
@@ -284,7 +284,7 @@
             </div>
          </div>
          <div class="row text-center">
-            <div class="col-10 pb-4">
+            <div class="col-xl-10 col-sm-12 pb-4">
                <div class="review">
                   <img src="img/avatarMan.png" alt="">
                   <div>
@@ -295,7 +295,7 @@
             </div>
          </div>
          <div class="row justify-content-end">
-            <div class="col-10 pb-3">
+            <div class="col-xl-10 col-sm-12 pb-3">
                <div class="review right">
                   <img src="img/avatarWooman.png" height="100%" alt="">
                   <div>
@@ -307,7 +307,7 @@
             </div>
          </div>
          <div class="row">
-            <div class="col-10 pb-4">
+            <div class="col-xl-10 col-sm-12 pb-4">
                <div class="review">
                   <img src="img/avatarMan.png" alt="">
                   <div>
@@ -318,7 +318,7 @@
             </div>
          </div>
          <div class="row justify-content-end">
-            <div class="col-10">
+            <div class="col-xl-10 col-sm-12">
                <div class="review right">
                   <img src="img/avatarWooman.png" height="100%" alt="">
                   <div>
@@ -330,7 +330,7 @@
             </div>
          </div>
          <div class="row text-center">
-            <div class="col-12">
+            <div class="col-xl-12">
                <span class="mt-3">Показать ещё...</span>
             </div>
          </div>
@@ -353,8 +353,8 @@
    <!-- Футер -->
    <div class="container-fluid footer">
       <div class="container">
-         <div class="row justify-content-center">
-            <div class="col-2">
+         <div class="row justify-content-center footerRow">
+            <div class="col-xl-2 col-sm-4">
                <ul>
                   <li>О компании</li>
                   <li>Услуги</li>
@@ -363,13 +363,13 @@
                   <li>Отзывы</li>
                </ul>
             </div>
-            <div class="col-2">
+            <div class="col-xl-2 col-sm-4">
                <ul>
                   <li>Реквизиты</li>
                   <li>Оплата</li>
                </ul>
             </div>
-            <div class="col-3">
+            <div class="col-xl-3 col-sm-4">
                <ul>
                   <li>Бриф</li>
                   <li>Бонусы</li>
@@ -377,12 +377,12 @@
                   <li>Конфиденциальности</li>
                </ul>
             </div>
-            <div class="col-2">
+            <div class="col-xl-2 col-sm-8">
                <ul>
                   <li>Вакансии</li>
                </ul>
             </div>
-            <div class="col-3 borderNone">
+            <div class="col-xl-3 col-sm-4 borderNone">
                <ul>
                   <li>Контакты:</li>
                   <li><i class="fas fa-phone fa-rotate-90"></i> +7 920 654 38 10</li>
@@ -395,7 +395,7 @@
                   </li>
                </ul>
             </div>
-            <div class="col-12">
+            <div class="col-xl-12">
                <ul>
                   <li class="text-center copy">&copy 2018 <span>WEBFORTE.RU</span></li>
                </ul>
@@ -412,10 +412,26 @@
          $(".navbar-toggler span i").toggleClass('fa-times');
       });
       $('.slider').slick({
-         infinite: true,
-         slidesToShow: 3,
-         slidesToScroll: 1
-      });
+               infinite: true,
+               slidesToShow: 3,
+               slidesToScroll: 1,
+               responsive: [
+                  {
+                     breakpoint: 1200,
+                     settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 1,
+                     }
+                  },
+                  {
+                     breakpoint: 992,
+                     settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1,
+                     }
+                  }
+               ]
+               });
    </script>
 </body>
 
