--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                <section class="form1 form2">
                   <h3>Бонусный пакет 5 000 руб.</h3>
                   <p class="checked"><img src="img/checked2.png"> Адаптивный
-                     дизайн.......................................<span>бесплатно</span></p>
+                     дизайн....................<span>бесплатно</span></p>
                   <p class="checked"><img src="img/checked2.png"> Помощь при формировании УТП.......<span>бесплатно</span></p>
                   <p class="checked"><img src="img/checked2.png"> Корректура продающего текста...........<span>бесплатно</span></p>
                   <p class="checked"><img src="img/checked2.png">
-                     Рерайт........................................................................<span>бесплатно</span></p>
+                     Рерайт.....................<span>бесплатно</span></p>
                   <p class="bold">Получите бонус сейчас и гарантировано воспользуйтесь им после окончания акции</p>
                   <form action="">
                      <input type="text" placeholder="* Имя">
